[package]
name = "switch-resume"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Delimited async continuations"
repository = "https://github.com/kuviman/switch-resume"
readme = "README.md"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }

[dependencies]
async-channel = "1.9.0"
async-executor = "1.5.1"
async-oneshot = "0.5.0"
async-recursion = "1.0.4"
async-trait = "0.1.73"
futures = "0.3.28"
